	argument, allowing to set all three colors simultaneously.

    o	iterating over a factor in a for loop now coerces to a character
	vector (rather than using the integer codes).

    o	data.frame() now recycles columns of list arguments, not just
	vectors and factors.

    o	plot.ts(plot.type="multiple") now makes use of *.lab and
	*.axis graphical parameters (wish of PR#13134 and 13135)

    o	Classes can be exported from a namespace using the NAMESPACE
	file directive'exportClassPattern' which has the same syntax
	as 'exportPattern'.

    o	The Rd converter now detects and gives a warning on invalid
	whitespace between arguments after the first, e.g.  \item{foo}
	{some value} for \item and \section.  Previously arguments
	after silently whitespace were ignored.

	Use of top-level \itemize inside a \value block is incorrect
	and gave a faulty conversion.  It is now detected and removed,
	with a warning.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.

    o	The numeric and power(0.5) forms of argument to make.link()
	which were deprecated in 2.4.0 are now defunct: use power()
	directly.


UTILITIES

    o R CMD build now also uses a Makevars[.win] file for cleaning up
      src/.

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
    	characters in UTF-8 (thanks to a hint from Alexey Shipunov).

    o   New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.

    o	New environment variable R_TEXI2DVICMD to hold the path (if any)
	to 'texi2dvi' found at configure time: this now provides the
	default to option("texi2dvi").


INSTALLATION
